<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    >

  
  <ImageView
      android:id="@+id/backImageView"
      android:layout_width="?attr/barIconSize"
      android:layout_height="?attr/barIconSize"
      android:layout_margin="0dp"
      android:contentDescription="@string/desc_backButton"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_backarrow"/>
  
  <TextView
      android:id="@+id/titleTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="4dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="4dp"
      android:text="@string/title_welcome"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toRightOf="@+id/backImageView"
      app:layout_constraintRight_toLeftOf="@+id/accountImageView"
      app:layout_constraintTop_toTopOf="parent"/>
  
  <ImageView
      android:id="@+id/accountImageView"
      android:layout_width="?attr/barIconSize"
      android:layout_height="?attr/barIconSize"
      android:layout_margin="0dp"
      android:contentDescription="@string/desc_acctButton"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_account"/>
</android.support.constraint.ConstraintLayout>
